Remove Gallery; Fix contactme alignment

--- a/src/Stylesheets/ContactMe.css
+++ b/src/Stylesheets/ContactMe.css
@@ -12,6 +12,9 @@
     float: left;
     background-position-y: 30%;
     z-index: 9999;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
 }
 
 #contactme .shape {
@@ -40,8 +43,57 @@
 }
 
 #contactme .form-container {
-    padding-top: 6rem;
-    margin-bottom: 6rem;
+    padding: 6rem 0;
+    margin: 0 auto;
+    width: 100%;
+}
+
+#contactme .form-container .row {
+    min-height: 60vh;
+    display: flex;
+    align-items: center;
+}
+
+#contactme .form-container .contact-left {
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center; */
+    height: 100%;
+}
+
+#contactme .form-container .contact-left .contact-info {
+    padding: 2rem;
+    width: 100%;
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* justify-content: center; */
+    /* align-items: center; */
+}
+
+#contactme .form-container .contact-left .contact-info div.contactme-each-section {
+    margin-bottom: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    min-height: 80px;
+    /* width: 100%; */
+}
+
+#contactme .form-container .contact-left div span.contact-detail-heading {
+    display: block;
+    font-family: 'Oswald', sans-serif;
+    color: white;
+    font-size: 1.8rem;
+    font-weight: 700;
+    margin-bottom: 0.5rem;
+    letter-spacing: 0;
+}
+
+#contactme .form-container .contact-left div span:not(.contact-detail-heading) {
+    display: block;
+    font-size: 1.1rem;
+    line-height: 1.5;
 }
 
 #contactme .form-container span.contactme-heading {
@@ -49,18 +101,8 @@
     font-family: 'Poppins', sans-serif;
     color: white;
     font-size: 3.5rem;
-    margin-left: 4rem;
-    text-transform: initial;
-    padding: 0;
-    margin: 0;
-    align-self: center;
-    justify-self: center;
-    background-color: transparent;
-}
-
-#contactme .form-container .contact-left {
-    justify-content: center;
-    align-items: center;
+    text-align: center;
+    margin-bottom: 3rem;
 }
 
 #contact-form form .input-group .textarea {
@@ -125,22 +167,4 @@
 #contactme .justify-content-center {
     justify-content: center;
     align-items: center;
-}
-
-#contactme .form-container .contact-left div span.contact-detail-heading {
-    display: block;
-    font-family: 'Oswald', sans-serif;
-    color: white;
-    font-size: 1.8rem;
-    font-weight: 700;
-    margin-left: 4rem;
-    padding: 0;
-    margin: 0;
-    align-self: center;
-    justify-self: center;
-    letter-spacing: 0;
-}
-
-#contactme .form-container .contact-left div.contactme-each-section {
-    margin-bottom: 15px;
 }
